--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,15 +1,23 @@
 cachelib==0.9.0
 click==8.1.3
+contourpy==1.0.6
+cycler==0.11.0
 dominate==2.7.0
 Flask==2.2.2
 Flask-Bootstrap==3.3.7.1
 Flask-WTF==1.0.1
+fonttools==4.38.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 joblib==1.2.0
+kiwisolver==1.4.4
 MarkupSafe==2.1.1
+matplotlib==3.6.2
 numpy==1.24.1
+packaging==22.0
 pandas==1.5.2
+Pillow==9.4.0
+pyparsing==3.0.9
 python-dateutil==2.8.2
 pytz==2022.7
 scikit-learn==1.2.0
